# odoo_connector_rabbitmq

./: .gitignore  =1.3.0  CLAUDE.md  Dockerfile.test  README.md  docker-compose.integ-17.yml  docker-compose.integ-18.yml  docker-compose.integ-19.yml  docker-compose.test-18.yml  docker-compose.test-19.yml  docker-compose.yml  mkdocs.yml  odoo.conf  pyproject.toml  test_integration.py
.github/workflows/: docs.yml
docs/: index.md
docs/architecture/: multi-worker-safety.md  outbox-pattern.md  overview.md
docs/deployment/: docker.md  production.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: consuming-messages.md  publishing-events.md  retry-and-dead-letter.md  security.md
docs/reference/: configuration.md  cron-jobs.md  decorator.md  models.md
odoo_connector_rabbitmq/: __init__.py  __manifest__.py  decorator.py  docker-compose.yml  hooks.py
odoo_connector_rabbitmq/data/: cron_data.xml  rabbitmq_data.xml
odoo_connector_rabbitmq/models/: __init__.py  rabbitmq_connection.py  rabbitmq_consumer_field_mapping.py  rabbitmq_consumer_rule.py  rabbitmq_event_bus_mixin.py  rabbitmq_event_log.py  rabbitmq_event_rule.py  rabbitmq_service.py  res_config_settings.py
odoo_connector_rabbitmq/security/: ir.model.access.csv  rabbitmq_security.xml
odoo_connector_rabbitmq/tests/: __init__.py  test_consumer_mapping.py  test_decorator.py  test_event_log.py  test_event_rules.py  test_hooks.py
odoo_connector_rabbitmq/views/: menu.xml  rabbitmq_connection_views.xml  rabbitmq_consumer_rule_views.xml  rabbitmq_event_log_views.xml  rabbitmq_event_rule_views.xml  res_config_settings_views.xml
