[project]
name = "odoo-connector-rabbitmq"
version = "1.0.0"
description = "Production-grade event-driven architecture for Odoo 18.0 via RabbitMQ"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Tony" }]
dependencies = [
    "pika>=1.3.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # function name should be lowercase (Odoo uses camelCase in some APIs)
    "N806",   # variable in function should be lowercase (e.g. BaseModel)
    "N815",   # mixedCase variable in class scope (Odoo convention)
    "S101",   # use of assert (fine in tests)
    "S110",   # try-except-pass (intentional for best-effort cleanup like channel.close())
    "SIM105", # contextlib.suppress (less readable for cleanup patterns)
    "RUF012", # mutable class attributes (Odoo models use class-level fields)
    "UP038",  # Use X | Y in isinstance — we use tuple form for Python 3.9 compat
]

[tool.ruff.lint.isort]
known-first-party = ["odoo", "odoo.addons"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__manifest__.py" = ["E501", "B018"]
"__init__.py" = ["F401"]  # unused imports are re-exports
"**/tests/**" = ["PT009", "PT027"]  # Odoo tests use unittest-style assertions

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8",
]
